# .dev

./: .gitignore  .pdbrc  .vimrc  JARDOC.md  README.md  install_macos.zsh
.ipython/profile_jar/: history.sqlite  ipython_config.py
.ipython/profile_jar/db/: dhist
.ipython/profile_jar/startup/: 00-magic.py
kitty/: README.md  assets.json  fuzzy.py  jarkit.py  kitty.conf  processed.json  pyproject.toml
nvim/: dprint.json  eslintignore  eslintrc.json  init.vim  package-lock.json  package.json  packer_snapshot.json  pluginscfg.vim
nvim/UltiSnips/: markdown.snippets  python.snippets  snippets.snippets  zsh.snippets
nvim/ftplugin/: python_mappings.vim
nvim/lua/: plugins.lua
nvim/lua/config/: ale.lua  cmp-nvim-ultisnips.lua  feline.lua  neo-tree.lua  nvim-cmp.lua  nvim-dap-ui.lua  nvim-dap.lua  nvim-lspconfig.lua  nvim-web-devicons.lua  telescope-env.lua  telescope.lua  trouble.lua  ultisnips.lua  vim-airline.lua  vim-code-dark.lua
nvim/snippets/: html.json  jinja-html.json  markdown.json  python.json
zsh/: zsh_all  zsh_macos
